--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ plugins {
     id 'eclipse'
     id 'idea'
     id 'maven-publish'
-    id 'net.minecraftforge.gradle' version '[6.0,6.2]'
+    id 'net.minecraftforge.gradle' version '[6.0.14,6.2)'
 }
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'org.spongepowered.mixin'
@@ -164,8 +164,8 @@ dependencies {
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
 
-    implementation fg.deobf('com.github.glitchfiend:TerraBlender-forge:1.20.1-3.0.0.169')
-    implementation fg.deobf('software.bernie.geckolib:geckolib-forge-1.20.1:4.2.1')
+    implementation fg.deobf('com.github.glitchfiend:TerraBlender-forge:1.20.2-3.0.0.170')
+    implementation fg.deobf('software.bernie.geckolib:geckolib-forge-1.20.2:4.2.3')
 }
 
 // This block of code expands all declared replace properties in the specified resource targets.
